@@ -1,6 +1,5 @@
 package io.mars.basemanagement.datageneration;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -37,9 +36,9 @@ public class BaseGenerator implements Component {
 	public List<Base> generateInitialBases() {
 		final List<GeoPoint> geoLocations = Collections.singletonList(new GeoPoint(2.333333, 48.866667)); //paris by default for everybody
 
-		final List<String> nameFirstPartDictionnary1 = Arrays.asList("Alpha", "Beta", "Gamma", "Delta", "Epsilon", "Zeta", "Eta", "Theta");
-		final List<String> nameSecondPartDictionnary2 = Arrays.asList("Aldebaran", "Centauri", "Pisces", "Cygnus", "Pegasus", "Dragon", "Andromeda");
-		final List<String> sampleTags = Arrays.asList("#mountain", "#crater", "#esa", "#cnsa", "#roscosmos", "#nasa", "#experimental");
+		final List<String> nameFirstPartDictionnary1 = List.of("Alpha", "Beta", "Gamma", "Delta", "Epsilon", "Zeta", "Eta", "Theta");
+		final List<String> nameSecondPartDictionnary2 = List.of("Aldebaran", "Centauri", "Pisces", "Cygnus", "Pegasus", "Dragon", "Andromeda");
+		final List<String> sampleTags = List.of("#mountain", "#crater", "#esa", "#cnsa", "#roscosmos", "#nasa", "#experimental");
 
 		final String exteriorPicturePrefix = "/io/mars/datageneration/files/bases/mars base ";
 		final String exteriorPictureSuffix = ".jpg";
